--- a/Fzone-demo/dangnhap.html
+++ b/Fzone-demo/dangnhap.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Đăng Nhập</title>
     <link rel="stylesheet" href="asset/css/styledn.css">
-    <link rel="stylesheet" href="asset/css/stylesp.css">
+    <link rel="stylesheet" href="asset/css/header.css">
+    <link rel="stylesheet" href="asset/css/footer.css">
+    <link rel="stylesheet" href="asset/css/rootcolor.css">
     <link rel="icon" type="image/x-icon" href="img/favicon.ico">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
@@ -72,7 +74,9 @@
             });
         </script>
     </div>
-    <footer></footer>
+    <footer>
+        
+    </footer>
     <script src="asset/js/ichf.js"></script>
 </body>
 </html>
