--- a/Fzone-demo/footer.html
+++ b/Fzone-demo/footer.html
@@ -20,9 +20,9 @@
         <div class="ft">
             <h3>Theo dõi chúng tôi</h3>
             <ul>
-                <li><a href="#"><i class="fa-brands fa-facebook"><span>Nguyễn Khánh Duy</span></i></a></li>
-                <li><a href="#"><i class="fa-brands fa-twitter"><span>NKDUY</span></i></a></li>
-                <li><a href="#"><i class="fa-brands fa-square-instagram"><span>KhanhDuy2308</span></i></a></li>
+                <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
+                <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+                <li><a href="#"><i class="fa-brands fa-square-instagram"></i></a></li>
             </ul>
         </div>
         <div id="btt">
