--- a/Fzone-demo/header.html
+++ b/Fzone-demo/header.html
@@ -10,7 +10,7 @@
         <div class="input">
             <form id="searchForm">
                 <input type="text" id="searchQuery" name="query" placeholder="Tìm kiếm" required>
-                <button type="submit"><i class="fa-solid fa-search"></i></button>
+                <!-- <button type="submit"><i class="fa-solid fa-search"></i></button> -->
             </form>
         </div>     
         <nav class="nav-top">
