--- a/Fzone-demo/sanphamtainghect-1.html
+++ b/Fzone-demo/sanphamtainghect-1.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Fzone - Cửa hàng phụ kiện chơi game và công nghệ chất lượng cao.">
     <title>Fzone - Cửa hàng phụ kiện chơi game và công nghệ</title>
-    <link rel="stylesheet" href="asset/css/stylectsp.css">
+    <link rel="stylesheet" href="asset/css/chitietsanphamtainghe.css">
     <link rel="stylesheet" href="asset/css/header.css">
     <link rel="stylesheet" href="asset/css/footer.css">
     <link rel="stylesheet" href="asset/css/rootcolor.css">
