--- a/Fzone-demo/dangky.html
+++ b/Fzone-demo/dangky.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Đăng Ký Thành Viên</title>
-    <link rel="stylesheet" href="asset/css/styledk.css">
+    <link rel="stylesheet" href="asset/css/dangky.css">
     <link rel="stylesheet" href="asset/css/header.css">
     <link rel="stylesheet" href="asset/css/footer.css">
     <link rel="stylesheet" href="asset/css/rootcolor.css">
